# PT-PARTNERS

./: .gitignore  404.html  CNAME  LICENSE  Makefile  README.md  b_index.html  index-ru.html  index.html  pyproject.toml  styles.css  ukraine-consul-ru.html  ukraine-consul.html
blocks/accordion_container/: README.md  base.css  base.j2  base.js  schema.json
blocks/contact_fab_block/: README.md  base.css  base.j2  base.js  schema.json
blocks/contacts_block/: README.md  base.css  base.j2  base.js  schema.json
blocks/core_header_block/: README.md  base.j2  schema.json
blocks/hero2_block/: README.md  base.css  base.j2  schema.json
blocks/hero_block/: README.md  base.css  base.j2  schema.json
blocks/hero_txt1_block/: README.md  base.css  base.j2  schema.json
blocks/office_block/: README.md  base.css  base.j2  schema.json
blocks/path_way_block/: README.md  base.css  base.j2  schema.json
blocks/site_footer_block/: README.md  base.css  base.j2  base.js  schema.json
extra_assets/: auto_registration.css
generator/: 404.py  check_assets.py  cli.py  generate_site_assets.py  inline_block.schema.json  merge_realizations.py  render_block.py  split_realizations.py  validate_json.py
json_backbone/: auto_registration_ru.json  auto_registration_ua.json  consular_ru.json  consular_ua.json
sites/: 404.html  auto_registration_ru.html  auto_registration_ua.html  auto_registration_ua.json  consular_ru.html  consular_ua.html  consular_ua.json  site_ua.json  ukraine-consul-ru.html
static/: styles.css
templates/: core_header.j2  core_header.json
(+82 files in other folders)
